--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,23 @@ body {
  color: white;
 }
 
+.movil {
+  display: none;
+}
+
 .maps {
   background-image: url('./assets/maps.png');
   background-size: cover; /* Ajusta la imagen para cubrir todo el contenedor */
   background-position: center; /* Centra la imagen en el contenedor */
   background-repeat: no-repeat; /* Evita que la imagen se repita */
+}
+
+@media (max-width: 746px) {
+  .escritorio {
+    display: none;
+  }
+
+  .movil {
+    display: block;
+  }
 }
